--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #6B5B95;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
